Adding arquillian support for Integration Testing