@@ -14,6 +14,7 @@
     <final.name>kukulkan-ee</final.name>
     <slf4j.version>1.7.30</slf4j.version>
     <deltaspike.version>1.9.4</deltaspike.version>
+    <jboss.arquillian.version>1.6.0.Final</jboss.arquillian.version>
   </properties>
   <dependencies>
     <dependency>
@@ -59,6 +60,37 @@
       <artifactId>deltaspike-data-module-impl</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+      <!-- Testing dependencies -->
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jboss.arquillian.junit</groupId>
+          <artifactId>arquillian-junit-container</artifactId>
+          <scope>test</scope>
+          <version>${jboss.arquillian.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jboss.shrinkwrap.resolver</groupId>
+          <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>fish.payara.arquillian</groupId>
+          <artifactId>arquillian-payara-server-embedded</artifactId>
+          <version>2.3.1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>fish.payara.extras</groupId>
+          <artifactId>payara-embedded-web</artifactId>
+          <version>${payaraVersion}</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -66,6 +98,13 @@
                 <groupId>org.apache.deltaspike.distribution</groupId>
                 <artifactId>distributions-bom</artifactId>
                 <version>${deltaspike.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>${jboss.arquillian.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -78,7 +117,6 @@
           <groupId>org.bsc.maven</groupId>
           <artifactId>maven-processor-plugin</artifactId>
           <version>4.0</version>
-
           <executions>
               <execution>
                   <id>process</id>
@@ -103,6 +141,32 @@
               </dependency>
           </dependencies>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <executions>
+                <execution>
+                    <id>integration-test</id>
+                    <goals>
+                        <goal>integration-test</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>verify</id>
+                    <goals>
+                        <goal>verify</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <argLine>-Xmx2048m -Xmx2048m --illegal-access=permit</argLine>
+                <systemProperties>
+                    <arquillian.launch>payara-embedded</arquillian.launch>
+                </systemProperties>
+            </configuration>
+        </plugin>
+
     </plugins>
   </build>
   <profiles>
